force-app/main/default/objects/EndPoint_DHL__mdt/fields/servicio__c.field-meta.xml
<CustomField>
    <fullName>servicio__c</fullName>
    <label>servicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>