force-app/main/default/objects/EndPoint_DHL__mdt/fields/ShipperAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ShipperAccountNumber__c</fullName>
    <label>ShipperAccountNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>