force-app/main/default/objects/EndPoint_DHL__mdt/fields/ShipperAccountNumberDDP__c.field-meta.xml
<CustomField>
    <fullName>ShipperAccountNumberDDP__c</fullName>
    <label>ShipperAccountNumberDDP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>