force-app/main/default/objects/EndPoint_DHL__mdt/fields/SiteID__c.field-meta.xml
<CustomField>
    <fullName>SiteID__c</fullName>
    <label>SiteID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>