force-app/main/default/objects/EndPoint_DHL__mdt/fields/tel_fono_contacto__c.field-meta.xml
<CustomField>
    <fullName>tel_fono_contacto__c</fullName>
    <label>teléfono contacto</label>
    <type>Phone</type>
</CustomField>